tests/paczka1/fuzzy1/92706827.err
Error in line 9: LQMOB S379 53,4
Error in line 22: LQMOB S806 58,7
Error in line 32: bICNzlHR S728 44,6
Error in line 36: LQMOB S584 V2V,9
Error in line 31: LQMOB S584 53,0
